# RCU-MORQA

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  requirements.txt
src/: prompts.py
src/eval/: answer_extraction_eval.py  binary_answer_classification_eval.py  classification_eval.py  cli.py  eval.py  extraction_eval.py  iaa_classification_eval.py  iaa_extraction_eval.py  prognosis_extraction_eval.py  question_classification_eval.py  question_extraction_eval.py  runner.py
src/extraction/: biobert.py  cli.py  deepseek.py  extractor.py  gemini.py  gpt.py  llm.py  mrc.py  qwen.py  rule.py  runner.py  sentence_boundary.py
src/preprocess/: data.py
src/similarity/: biobert.py  similarity.py  tfidf.py
src/util/: env.py  io.py  paths.py
tests/: context.py  test_cli_dispatch.py  test_env_loader.py  test_eval_logic.py  test_eval_runner.py  test_extraction_runner.py  test_overlap.py  test_paths.py
