[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morqa-rcu"
version = "1.0.0"
description = "Medical Open-Response Question Answering - Response Content Units"
readme = "README.md"
authors = [
    { name = "Yongsin Park", email = "yongsin.nlp@gmail.com" },
]
maintainers = [
    { name = "__FILL_IN__", email = "__FILL_IN__" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
dev = ["__FILL_IN__"]
test = ["__FILL_IN__"]
docs = ["__FILL_IN__"]

[project.urls]
Homepage = "https://github.com/yongsinp/morqa-rcu"
Issues = "https://github.com/yongsinp/morqa-rcu/issues"

[tool.setuptools.packages.find]
where = ["src"]