[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morqa-rcu"
version = "1.0.1"
description = "Response Content Units: Medical Open-Response Question Answering"
readme = "README.md"
authors = [
    { name = "Yongsin Park", email = "yongsin.nlp@gmail.com" },
]
maintainers = [
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/yongsinp/morqa-rcu"
Issues = "https://github.com/yongsinp/morqa-rcu/issues"

[tool.setuptools.packages.find]
where = ["src"]
